<resources>
    <string name="app_name">Amis</string>
    <string name="select_member_url">http://ardenteserver.iptime.org:9001/server/member_tb/select_member.jsp</string>
    <string name="insert_member_url">http://ardenteserver.iptime.org:9001/server/member_tb/insert_member.jsp</string>
    <string name="update_member_url">http://ardenteserver.iptime.org:9001/server/member_tb/update_member.jsp</string>
    <string name="delete_member_url">http://ardenteserver.iptime.org:9001/server/member_tb/delete_member.jsp</string>
    <string name="select_interest_url">http://ardenteserver.iptime.org:9001/server/member_tb/select_member_interest.jsp</string>
    <string name="select_accountbook_url">http://ardenteserver.iptime.org:9001/server/accountbook_tb/select_accountbook.jsp</string>
    <string name="select_accountbook_list_url">http://ardenteserver.iptime.org:9001/server/accountbook_tb/select_accountbook_list.jsp</string>
    <string name="insert_accountbook_url">http://ardenteserver.iptime.org:9001/server/accountbook_tb/insert_accountbook.jsp</string>
    <string name="update_accountbook_url">http://ardenteserver.iptime.org:9001/server/accountbook_tb/update_accountbook.jsp</string>
    <string name="delete_accountbook_url">http://ardenteserver.iptime.org:9001/server/accountbook_tb/delete_accountbook.jsp</string>
    <string name="insert_usagehistory_url">http://ardenteserver.iptime.org:9001/server/accountbook_tb/insert_usagehistory.jsp</string>
    <string name="update_usagehistory_url">http://ardenteserver.iptime.org:9001/server/accountbook_tb/update_usagehistory.jsp</string>
    <string name="delete_usagehistory_url">http://ardenteserver.iptime.org:9001/server/accountbook_tb/delete_usagehistory.jsp</string>
    <string name="select_plan_url">http://ardenteserver.iptime.org:9001/server/plan_tb/select_plan.jsp</string>
    <string name="select_popular_plan_url">http://ardenteserver.iptime.org:9001/server/plan_tb/select_popular_plan.jsp</string>
    <string name="select_recommend_plan_url">http://ardenteserver.iptime.org:9001/server/plan_tb/select_recommend_plan.jsp</string>
    <string name="search_plan_url">http://ardenteserver.iptime.org:9001/server/plan_tb/search_plan.jsp</string>
    <string name="insert_plan_url">http://ardenteserver.iptime.org:9001/server/plan_tb/insert_plan.jsp</string>
    <string name="delete_plan_url">http://ardenteserver.iptime.org:9001/server/plan_tb/delete_plan.jsp</string>
    <string name="update_plan_scope_url">http://ardenteserver.iptime.org:9001/server/plan_tb/update_plan_scope.jsp</string>
    <string name="update_plan_title_url">http://ardenteserver.iptime.org:9001/server/plan_tb/update_plan_title.jsp</string>
    <string name="select_schedule_url">http://ardenteserver.iptime.org:9001/server/schedule_tb/select_schedule.jsp</string>
    <string name="insert_schedule_url">http://ardenteserver.iptime.org:9001/server/schedule_tb/insert_schedule.jsp</string>
    <string name="update_schedule_url">http://ardenteserver.iptime.org:9001/server/schedule_tb/update_schedule.jsp</string>
    <string name="delete_schedule_url">http://ardenteserver.iptime.org:9001/server/schedule_tb/delete_schedule.jsp</string>
    <string name="delete_location_url">http://ardenteserver.iptime.org:9001/server/schedule_tb/delete_location.jsp</string>
    <string name="insert_location_url">http://ardenteserver.iptime.org:9001/server/schedule_tb/insert_location.jsp</string>
    <string name="select_comment_url">http://ardenteserver.iptime.org:9001/server/comment_tb/select_comment.jsp</string>
    <string name="insert_comment_url">http://ardenteserver.iptime.org:9001/server/comment_tb/insert_comment.jsp</string>
    <string name="delete_comment_url">http://ardenteserver.iptime.org:9001/server/comment_tb/delete_comment.jsp</string>
    <string name="update_comment_url">http://ardenteserver.iptime.org:9001/server/comment_tb/update_comment.jsp</string>
    <string name="select_star_rating_url">http://ardenteserver.iptime.org:9001/server/star_rating_tb/select_star_rating.jsp</string>
    <string name="detailCommon">http://api.visitkorea.or.kr/openapi/service/rest/KorService/detailCommon</string>
    <string name="areaCode">http://api.visitkorea.or.kr/openapi/service/rest/KorService/areaCode</string>
    <string name="searchKeyword">http://api.visitkorea.or.kr/openapi/service/rest/KorService/searchKeyword</string>
    <string name="areaBasedList">http://api.visitkorea.or.kr/openapi/service/rest/KorService/areaBasedList</string>
    <string name="member_register"><u>회원가입</u></string>
    <string name="find_password"><u>비밀번호를 잊으셨나요?</u></string>
    <string name="my_plan">나의 계획</string>
    <string name="my_accountbook">나의 가계부</string>
    <string name="search_location">장소 검색</string>
    <string name="search_plan">계획 검색</string>
    <string name="progressing_trip">진행중인 여행</string>
    <string name="popular_plan">인기 플랜</string>
    <string name="plan_title">플랜 이름</string>
    <string name="scope">공개 범위</string>
    <string name="open">공개</string>
    <string name="secret">비공개</string>
    <string name="bring">가져오기</string>
    <string name="navigation">길 찾기</string>
    <string name="map">지도 보기</string>
    <string name="comment">댓글 달기</string>
    <string name="scoreText">평점</string>
    <string name="score_initial_value">0.0</string>
    <string name="start_point">출발 지점</string>
    <string name="destination_point">도착 지점</string>
    <string name="cancel">취소</string>
    <string name="create">생성</string>
</resources>
