<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="test"
        android:textSize="25dp"
        android:textColor="#000000"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/location_title"
        android:background="#E6E6E6"
        android:id="@+id/view8"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:id="@+id/location_detail_img"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/view8"
        android:src="@drawable/prepare_img"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="상세 설명"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/location_detail_img"
        android:id="@+id/location_title_second"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/location_detail_overview"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:scrollbars="vertical"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/location_title_second"
        android:text="test" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_detail_overview"
            android:layout_centerHorizontal="true"
            android:stretchColumns="*"
            android:layout_marginTop="10dp"
            android:id="@+id/tableLayout2">
            <TableRow>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/location_detail_nav_btn"
                    android:src="@drawable/direction"
                    android:background="@drawable/selector_button"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/navigation" />
                <ImageButton
                    android:id="@+id/location_detail_map_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/nav_icon"
                    android:background="@drawable/selector_button"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/map" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/comment_icon"
                    android:background="@drawable/selector_button"
                    android:id="@+id/location_detail_comment_btn"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/comment" />
            </TableRow>
        </TableLayout>

    <TextView
        android:id="@+id/location_detail_score_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/location_title_second"
        android:layout_below="@+id/tableLayout2"
        android:text="@string/scoreText"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:textSize="25dp" />

    <RatingBar
        android:id="@+id/location_detail_star_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout2"
        android:layout_centerHorizontal="true"
        android:isIndicator="true"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:stepSize="0.5" />

    <TextView
        android:id="@+id/location_detail_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/tableLayout2"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="19dp"
        android:text="@string/score_initial_value"
        android:textColor="#FA5858"
        android:textSize="25dp" />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressing_loc_comment"
        android:layout_below="@+id/location_detail_score_title"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/empty_loc_comment_list"
            android:layout_below="@+id/location_detail_score_title"
            android:layout_marginTop="5dp"
            android:text="댓글이 없습니다."
            android:gravity="center"
            android:visibility="gone"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_detail_score_title"
        android:layout_marginTop="5dp"
        android:id="@+id/location_detail_commentList"/>
    </RelativeLayout>
</ScrollView>
